# RTGC

./: CMakeLists.txt  README.md  RTGC.code-workspace  RTGC.hpp  RTGC0.01.hpp  RTGC0.02.hpp  RTGC0.03.hpp  RTGC_MT.code-workspace  example.cpp  priority_ptr.hpp  privateget.cpp  unique_ptr.cpp
doc/: 原理介绍.md  参考论文.md  设计理念.md
docs/: 原理介绍.md  设计理念.md
docs/intro.zh/: C++内存管理方式的缺陷.md
example/: CMakeLists.txt
example/0/: 0.cpp  CMakeLists.txt  RTGCDEF.cpp
example/1/: 1.cpp  CMakeLists.txt  RTGCDEF.cpp
example/2/: 2.cpp  CMakeLists.txt  RTGCDEF.cpp
example/3/: 3.cpp  CMakeLists.txt
example/4/: 4.cpp  CMakeLists.txt  RTGCDEF.cpp
example/5/: 5.cpp  CMakeLists.txt  RTGCDEF.cpp
include/: RTGC.hpp  getStructMember.hpp
include/RTGC/: RTGC.hpp  RootPtr.hpp  SnapPtr.hpp
include/RTGC/detail/: ChainCore.hpp  ChainPtr.hpp  ClassMembers.hpp  CorePtr.hpp  CountCore.hpp  CountPtr.hpp  GCThread.hpp  GCThreadImpl.hpp  LinkAnce.hpp  MTChainCore.hpp  MTChainCore2.hpp  MTChainPtr.hpp  MTChainPtr2.hpp  MTCountCore.hpp  MTCountPtr.hpp  Optimised.hpp  RootPtr.hpp  ShellPtr.hpp  ShellPtr1.hpp  ShellPtr2.hpp  SmarterPtr.hpp  SnapPtr.hpp
test/: 0.cpp  1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  launch.json  privateget.cpp  tasks.json
test/0/: 0.cpp  CMakeLists.txt  gc_cpp.h
test/0/lib/: bdwgc-clang.txt
test/1/: 1.cpp
test/2/: 2.cpp
test/3/: 3.cpp
test/4/: 4.cpp
test/5/: 5.cpp
test/6/: 6.cpp
test/7/: 7.cpp
test/单线程性能测试/: 5.cpp  gc_allocator.h
